Fixed spacing on about page

--- a/Style Guide 3/css/main.css
+++ b/Style Guide 3/css/main.css
@@ -707,6 +707,9 @@ text-underline-position: under;
   max-width: 50%;
 }
 
+.aboutimages{
+  padding-bottom: 30px;
+}
 
 
 .in-text-link h2 {
